# Fluid-Particle-Solver

./: .gitignore  .ycm_extra_conf.py  README.md  fps.code-workspace
src/: CMakeLists.txt  Makefile
src/basic/: config.inc  dataType.h  distributedObjBase.h  real3.h
src/dynamicMesh/: dynamicMesh.h  dynamicMesh_constructor.h  dynamicMesh_updateMapVector.h  dynamicMesh_updateMesh.h
src/finiteElement/: CMakeLists.txt  Hexa8_LGL2_Martin.cpp  Hexa8_LGL2_Martin.h  Hexa8_LGL2_Martin_dataDefinition.cpp  Makefile  faceElement.h  finiteElementBase.cpp  finiteElementBase.h
src/imcompressible/: CMakeLists.txt  Makefile  cubic.cfg  imcompNSDynamic.h  imcompNSDynamic_explicitConvectiveStep.h  imcompNSDynamic_initSolver.h  imcompNSDynamic_updateMatrices.h
src/math/: matrix.h
src/mesh/: cell.h  face.h  mesh.h  primitiveMesh.h  sync.h
tools/: generateHexaParameter.cpp
